	* configs/stm32_tiny: Add support for the STM32 Tiny development board
	  based on th STM32 F103C8T6 MCU (2013-5-28).
	* arch/arm/src/stm32/stm32_usbdev.c:  Fix an error in NULL packet
	  handling:  If the NULL-packet needed flag ever gets set, then
	  it is not cleared and inifinite NULL packets result.  This only
	  effects the CDC/ACM class and was the cause of the failure of
	  configs/stm32f3discovery/usbnsh configureation which works great
	  after this change (2013-5-29).
	* drivers/usbdev/cdcacm.c and pl2303.c and include/nuttx/usb/cdcacm.h:
	  Change the default IN request buffer size from 64 to 96.  This will
	  avoid requests of exactly MAXPACKET size and, hence, avoid so many
	  NULL packets.  Also, fix the OUT request buffers size to exactly
	  the max packet size.  It cannot be any other size (2013-5-29).
	* .gitignore:  Clean-up of most all .gitignore files:  Make scope of
	  ignore to be only the current directory; Ignore .dSYM files in
	  directories where .exe's may be build.  Also, in Makefiles,
	  clean .dSYM files in directories where .exe may be built (2013-5-30).
	* drivers/wireless/nrf24101.c/.h and include/nuttx/wireless/nrf24101.h:
	  Add new driver for the wireless nRF24L01+ transceiver.  From Laurent
	  Latil (2013-6-1).
	* drivers/wireless/cc1101:  Move files in the cc1101 up one directory.
	  From Laurent Latil (2013-6-1).
	* configs/stm32_tiny: Fix nRF24L01+ driver integration for the STM32
	  Tiny.  From Laurent Latil (2013-6-01).
	* configs/sam3u-ek:  All remaining configurations changed to use
	  the kconfig-frontends tools (2013-6-2).
	* arch/arm/src/sam3u/chip:  All SAM3U register definition files moved
	  to this subdirectory.  Naming of registers changed from SAM3U_ to
	  just SAM_.  This is in preparation for a SAM4L port (2013-6-2).
	* arch/arm/src/sam3u:  Renamed files to sam_* vs. sam3u_*.
	  Eliminated sam3u_internal.h; instead uses individual header
	  files for each SAM interface block (2013-6-2).